# ai-rpi-cam

./: .gitignore  Dockerfile  KIPR.txt  README.md  build.sh  meson.build  rpicam-kipr.service
DEBIAN/: control  postinst  postrm  prerm
apps/: meson.build  rpicam_kipr.cpp
assets/: kipr_mobilenet_ssd.json  kipr_posenet.json
container/: rpi-aarch64.ini  rpi-build.sh
encoder/: KIPRnet.cpp  KIPRnet.hpp  PracticalSocket.cpp  meson.build
packaging/: control  kipr-camera
post_processing_stages/: meson.build  object_detect_draw_cv_stage.cpp
post_processing_stages/kipr/: kipr_object_detection.cpp  kipr_posenet.cpp  kipr_post_processing_stage.cpp  kipr_post_processing_stage.hpp  meson.build
